@@ -14,7 +14,7 @@
 export { NodeTypeContext } from './contexts/NodeContext';
 export type { NodeTypeContextValue } from './contexts/NodeContext.types';
 export type { IConvertEngine, INodeConverterHandler } from './converter/ConvertEngine.types';
-export { convertLabelStyle } from './converter/convertDiagram';
+export { convertLabelStyle, convertLineStyle } from './converter/convertDiagram';
 export { AlignmentMap } from './converter/convertDiagram.types';
 export { convertHandles } from './converter/convertHandles';
 export type { GQLNodeDescription } from './graphql/query/nodeDescriptionFragment.types';
